# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]


## [2.1.13] - 2025-02-25
### Removed
- [SUDOERS] Remove deprecated entries for vlt-os user
### Changed
- [SUDOERS] Update sudoers' permissions for filebeat management


## [2.1.12] - 2024-11-13
### Fixed
- [CLOUD_INIT] Avoid automatic cache invalidation when datasources change on a machine


## [2.1.11] - 2024-09-12
### Changed
- [RSYSLOG_TEMPLATES] Control uuid generation in bulkid-template


## [2.1.10] - 2024-04-25
### Fixed
- [UPDATE_SYSTEM] Don't upgrade secadm-kmod in jails
### Changed
- [JAILS] Don't install Kernel in jails


## [2.1.9]- 2024-03-04
### Removed
- [JAILS] remove now-useless mkjail-* scripts
- [BASE_SUDOERS] mentions of mkjail-*
### Changed
- [SCRIPTS] Update Redis/Sentinel's announce-ip through redis commands when changing Vulture management IP
- [SYSTEM] [CSHRC] Add usefull keyboard bindings
- [UPDATE_SYSTEM] Stop vultured service during upgrades
- [UPDATE_SYSTEM] Install kernel/base in a separate Boot Environment
### Fixed
- [CLUSTER_JOIN] Fix wrong ca.key after cluster_join
- [NETWORK_IPS] Init pf rules before redis access
- [HOSTNAME] Restart gunicorn after db migration


## [2.1.8] - 2024-01-10
### Removed
- [UPDATE_SYSTEM] Don't upgrade/restart Darwin service specifically
### Changed
- [MISC] Some code cleanups and minor fixes
### Fixed
- [UPDATE_SYSTEM] Avoid linker errors during pkg upgrades by deactivating harden_rtld during upgrade


## [2.1.7] - 2023-09-12
### Fixed
- [UPGRADE_TO_13] Put the Node into MAINTENANCE mode during upgrades
- [UPGRADE_TO_13] Ensure Node is completely restarted before continuing


## [2.1.6] - 2023-08-22
### Added
- [UPDATE_SYSTEM] Updating toggle maintenance
- [RSYSLOG_TEMPLATES] bulkid-template for ELS datastream support
### Fixed